--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,141 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&family=Poppins:wght@100;300;400;500;600;700;800;900&display=swap');
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Poppins';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #252a34;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+/* sıfırlama */
+
+button {
+  border: none;
+  padding: 10px 20px;
+  color: white;
+  cursor: pointer;
+  border-radius: 4px;
+}
+
+.container {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+}
+
+.auth {
+  background: white;
+  width: 40vw;
+  height: 40vw;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 50px;
+}
+
+.auth h1 {
+  font-size: 35px;
+}
+.auth p {
+}
+.auth button {
+  background-color: aqua;
+  border: none;
+  padding: 10px;
+  color: white;
+  border-radius: 10px;
+}
+
+/* oda seçme ekranı */
+
+.room-container {
+  background-color: white;
+  width: 70vw;
+  height: 50vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  border-radius: 30px;
+}
+.room-container input {
+  padding: 10px 20px;
+  border-radius: 4px;
+}
+#enter {
+  background-color: aqua;
+}
+#leave {
+  background-color: crimson;
+}
+
+/* mesajlaşma alanı */
+
+.chat {
+  background-color: white;
+  height: 70vh;
+  width: 70vw;
+  min-width: 300px;
+  min-height: 600px;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.chat-info {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: white;
+  background-color: #ff2e63;
+  border-radius: 10px 10px 0 0;
+  padding: 10px;
+}
+.chat-info a {
+  background-color: aqua;
+  padding: 10px 20px;
+  border-radius: 10px;
+  color: white;
+  text-decoration: none;
+}
+.messages {
+  border: 1px solid;
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+}
+.message-info {
+  font-weight: bold;
+  margin-left: 10px;
+}
+.user-message {
+  align-self: flex-end;
+  margin-right: 20px;
+  background-color: aqua;
+  color: white;
+  border-radius: 4px 4px 0 4px;
+  padding: 4px;
+}
+
+form {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  margin: 10px 0;
+}
+form input {
+  width: 50%;
+  border-radius: 10px;
+  padding: 5px 10px;
+}
+form button {
+  background-color: aqua;
 }
